--- a/sunhomo-miniProgram/pages/activity/activities.wxss
+++ b/sunhomo-miniProgram/pages/activity/activities.wxss
@@ -1,27 +1,20 @@
-.header {
-  padding: 80rpx;
-  line-height: 1;
-}
-.title {
-  font-size: 52rpx;
-}
 .menu-list {
   display: flex;
   flex-direction: column;
   background-color: #fbf9fe;
-  margin-top: 10rpx;
+  margin-top: 5rpx;
 }
 .menu-item {
   color: #000000;
   display: flex;
   background-color: #fff;
-  margin: 10rpx 0rpx;
+  margin: 5rpx 0rpx;
   flex-direction: column;
 }
 .menu-item-main {
   display: flex;
-  padding: 40rpx;
-  border-radius: 10rpx;
+  padding: 20rpx;
+  border-radius: 5rpx;
   align-items: center;
   font-size: 32rpx;
   justify-content: space-between;
@@ -30,4 +23,17 @@
   width: 32rpx;
   height: 32rpx;
   transition: 400ms;
+}
+
+.banner{
+  width:100%;
+  height:234rpx;
+}
+.banner swiper{
+  height:100%;
+}
+.slide-image{
+  display:block;
+  width:100%;
+  height:100%;
 }
