--- a/sunhomo-miniProgram/pages/battle/battles.wxss
+++ b/sunhomo-miniProgram/pages/battle/battles.wxss
@@ -1,46 +1,15 @@
-.header-box {
-  background: #e64340;
-  padding: 32rpx;
-  display: flex;
-  align-items: center;
-}
-.header-box .avatar {
-  width: 128rpx;
-  height: 128rpx;
-  border-radius: 50%;
-}
-.header-box .btn {
-  margin-left: 32rpx;
-}
-.header-box .r {
-  margin-left: 32rpx;
-  color: #3a3939;
-  font-size: 48rpx;
-}
 .container{
   min-height: 100%;
   overflow: hidden;
   overflow-y: hidden;
 }
 
-.asset {
-  display: flex;
-  border-top: 1px solid #eee;
-  padding-top:20rpx;
-  padding-bottom:20rpx;
+.banner{
+  display:block;
+  width:100%;
+  height:300rpx;
 }
-.asset .item {
-  display: flex;
-  flex-direction: column;
-  width:33%;
-  text-align: center;
-  font-size: 13px;
-  line-height: 20px;
-  color:#333;
-}
-.asset .right {
-  border-left: 1px solid #eee;
-}
+
 .space {
   /* width: 100vw; */
   height: 16rpx;
@@ -54,17 +23,24 @@
 }
 .menu-item {
   /* width: 100vw; */
-  height: 104rpx;
+  /* height: 104rpx; */
   padding: 0 32rpx;
   background: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.menu-item .l {
-  font-size:34rpx;
+.menu-item .title {
+  font-size:30rpx;
   color:#333;
   line-height:104rpx;
+  padding-left: 5rpx;
+  font-weight: bold;
+}
+.menu-item .l {
+  font-size:30rpx;
+  color:#333;
+  line-height:60rpx;
   padding-left: 5rpx;
 }
 .menu-item .r {
@@ -75,8 +51,8 @@
   text-align: right;
 }
 .menu-item .next {
-  width: 30rpx;
-  height: 30rpx;
+  width: 40rpx;
+  height: 40rpx;
 }
 .menu-item button {
   margin: 0;
