--- a/sunhomo-miniProgram/pages/my/my.wxml
+++ b/sunhomo-miniProgram/pages/my/my.wxml
@@ -33,6 +33,10 @@
 			<view>{{userInfo.point}}</view>
 			<view>积分</view>
 		</view>
+		<view class='item right'>
+			<view>{{userInfo.ratio/100}}%({{userInfo.winNumber}}/{{userInfo.winNumber+userInfo.loseNumber}})</view>
+			<view>约战胜率</view>
+		</view>
 	</view>
 	<view class="space"></view>
 	<navigator url="/pages/my/myPoints">
@@ -81,7 +85,7 @@
 	<view class="line"></view>
 	<view class="menu-item">
 		<view class="l">小程序版本</view>
-		<view class="r">V2.2.0</view>
+		<view class="r">V2.3.0</view>
 	</view>
 
 </view>
