商品按价值排序

--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
@@ -74,7 +74,7 @@
                     <label class="col-sm-4 control-label is-required">活动地点：</label>
                     <div class="col-sm-8">
                         <select name="place" class="form-control m-b">
-                            <option value="垡头羽毛球活动中心" selected>垡头羽毛球活动中心</option>
+                            <option value="垡头羽毛球馆" selected>垡头羽毛球馆</option>
                         </select>
                     </div>
                 </div>
