--- a/sunhomo-miniProgram/pages/my/about.wxml
+++ b/sunhomo-miniProgram/pages/my/about.wxml
@@ -3,19 +3,22 @@
 		<view class="title">报名及退报规则</view>
 	</view>
 	<view class="menu-item">
-		<view class="l">1、活动开始前24小时可自行免费退报；</view>
+		<view class="l">1、主报名人仅限“北京-狼巢新窝”微信群内人员，挂无限制。非群内人员欢迎加微信“benven1124”；</view>
 	</view>
 	<view class="menu-item">
-		<view class="l">2、活动当天的前一天，如有替补可自行免费退报；</view>
+		<view class="l">2、活动开始前24小时可自行免费退报；</view>
 	</view>
 	<view class="menu-item">
-		<view class="l">3、活动当天如有替补，请在微信群确认后免费退报；否则正常交费；</view>
+		<view class="l">3、活动当天的前一天，如有替补可自行免费退报；</view>
 	</view>
 	<view class="menu-item">
-		<view class="l">4、替补达4人时，场馆如有空余场地，可加场；</view>
+		<view class="l">4、活动当天如有替补，请在微信群确认后免费退报；否则正常交费；</view>
 	</view>
 	<view class="menu-item">
-		<view class="l">5、普通打球活动可带挂报名，多次报名，自动带挂；比赛活动须本人报名，才能抽签分组；</view>
+		<view class="l">5、替补达4人时，场馆如有空余场地，可加场；</view>
+	</view>
+	<view class="menu-item">
+		<view class="l">6、普通打球活动可带挂报名，多次报名，自动带挂；比赛活动须本人报名，才能抽签分组；</view>
 	</view>
 
 	<view class="space"></view>
@@ -37,6 +40,9 @@
 	</view>
 	<view class="menu-item">
 		<view class="l">5、积分在活动第二天自动到账；</view>
+	</view>
+	<view class="menu-item">
+		<view class="l">6、兑换商品只消耗实时积分，不影响年度积分；</view>
 	</view>
 
 	<view class="space"></view>
