--- a/sunhomo-miniProgram/pages/battle/battles.wxss
+++ b/sunhomo-miniProgram/pages/battle/battles.wxss
@@ -3,11 +3,25 @@
   overflow: hidden;
   overflow-y: hidden;
 }
-
-.banner{
-  display:block;
-  width:100%;
-  height:300rpx;
+.title{
+  font-size: 32rpx;
+}
+.asset {
+  display: flex;
+  padding-top:20rpx;
+  padding-bottom:20rpx;
+}
+.asset .item {
+  display: flex;
+  flex-direction: column;
+  width:50%;
+  text-align: center;
+  font-size: 32rpx;
+  line-height: 32px;
+  color:#333;
+}
+.asset .right {
+  border-left: 1px solid #eee;
 }
 
 .space {
