--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -1,48 +1,97 @@
 <view class="container">
-  <block wx:for="{{battles}}" wx:for-item="battle">
-    <view class="title">约战日期：{{battle.battleDate}}
-      <block wx:if="{{battle.battleState==1}}">（待确认）</block>
-      <block wx:elif="{{battle.battleState==-1}}">(已取消)</block>
-      <block wx:elif="{{battle.battleState==2}}">
-        <block wx:if="{{battle.battleResult==1}}">(A队获胜)</block>
-        <block wx:elif="{{battle.battleResult==-1}}">(B队获胜)</block>
-      </block>
-    </view>
-    <view class="asset">
-      <view class="item">
-        <view>{{battle.a1Name}}</view>
-        <view>{{battle.a2Name}}</view>
-      </view>
-      <view class="item right">
-        <view>{{battle.b1Name}}</view>
-        <view>{{battle.b2Name}}</view>
-      </view>
-    </view>
-    <!-- 以下<block>只有管理员才能看到 -->
-    <block wx:if="{{userInfo.isAdmin==1}}">
-      <view style="text-align:center;margin-top:5rpx;">
-        <block wx:if="{{battle.battleState==2 && !battle.battleResult}}">
-          <button type="primary" size="mini" data-battleid="{{battle.battleId}}" data-action="2"
-            bindtap="confirmAndCancelAndWin" style="margin-left:10rpx;">A队获胜</button>
-        </block>
-        <block wx:if="{{battle.battleState==1}}">
-          <button type="primary" size="mini" data-battleid="{{battle.battleId}}" data-action="1"
-            bindtap="confirmAndCancelAndWin" style="margin-left:10rpx;">确认</button>
-        </block>
-        <block wx:if="{{battle.battleState!=-1}}">
-          <button type="primary" size="mini" data-battleid="{{battle.battleId}}" data-action="-1"
-            bindtap="confirmAndCancelAndWin" style="margin-left:10rpx;">取消</button>
-        </block>
-        <block wx:if="{{battle.battleState==2 && !battle.battleResult}}">
-          <button type="primary" size="mini" data-battleid="{{battle.battleId}}" data-action="3"
-            bindtap="confirmAndCancelAndWin" style="margin-left:10rpx;">B队获胜</button>
-        </block>
+  <view class="menu-list">
+    <block wx:for="{{battles}}" wx:for-item="battle">
+      <view class="menu-item">
+        <view class="menu-item-main">
+          <view class="menu-header">
+            <view class="header-left">约战日期：{{battle.battleDate}}</view>
+            <view class="header-right">
+              <block wx:if="{{userInfo.isAdmin==1}}">
+                <block wx:if="{{battle.battleState==2 && !battle.battleResult}}">
+                  <button type="primary" size="mini" style="padding:5rpx;" data-battleid="{{battle.battleId}}" data-action="2"
+                    bindtap="confirmAndCancelAndWin">A胜</button>
+                </block>
+                <block wx:if="{{battle.battleState==1}}">
+                  <button type="primary" size="mini" style="padding:5rpx;" data-battleid="{{battle.battleId}}" data-action="1"
+                    bindtap="confirmAndCancelAndWin">确认</button>
+                </block>
+                <block wx:if="{{battle.battleState!=-1}}">
+                  <button type="primary" size="mini" style="padding:5rpx;" data-battleid="{{battle.battleId}}" data-action="-1"
+                    bindtap="confirmAndCancelAndWin">取消</button>
+                </block>
+                <block wx:if="{{battle.battleState==2 && !battle.battleResult}}">
+                  <button type="primary" size="mini" style="padding:5rpx;" data-battleid="{{battle.battleId}}" data-action="3"
+                    bindtap="confirmAndCancelAndWin">B胜</button>
+                </block>
+              </block>
+            </view>
+          </view>
+          <view class="menu-container">
+            <view class="battle-box">
+              <view class="battle-player">
+                <block wx:if="{{battle.battleResult==1}}">
+                  <image class="icon-win left" src="/images/win.png" alt=""></image>
+                </block>
+                <view>{{battle.a1Name}}</view>
+                <view>{{battle.a2Name}}</view>
+              </view>
+              <image class="icon-vs" src="/images/vs.jpg" alt=""></image>
+              <view class="battle-player">
+                <block wx:if="{{battle.battleResult==-1}}">
+                  <image class="icon-win right" src="/images/win.png" alt=""></image>
+                </block>
+                <view>{{battle.b1Name}}</view>
+                <view>{{battle.b2Name}}</view>
+              </view>
+            </view>
+          </view>
+          <view class="call-wrap" wx:if="{{battle.battleState==2}}">
+            <view class="call-line">
+              <wxs module="m1">
+                var completeWidth = function (a, b) {
+                  var r = a / (a + b)
+                  return Math.round(r * 100) + '%';
+                }
+                module.exports.completeWidth = completeWidth;
+              </wxs>
+              <view class="line-cover" style="width:{{m1.completeWidth(battle.voteA,battle.voteB)}}"></view>
+              <text class="number-left">{{battle.voteA}}</text>
+              <text class="number-right">{{battle.voteB}}</text>
+            </view>
+            <view class="call-main" wx:if="{{battle.votes.length>0}}">
+              <view class="call-box">
+                <view class="call-list list-left">
+                  <block wx:for="{{battle.votes}}" wx:for-item="{{voter}}">
+                    <block wx:if="{{voter.vote==1}}">
+                      <image class="icon-photo" src="img.src" alt=""></image>
+                    </block>
+                  </block>
+                </view>
+              </view>
+              <view class="call-box">
+                <view class="call-list list-right">
+                  <block wx:for="{{battle.votes}}" wx:for-item="{{voter}}">
+                    <block wx:if="{{voter.vote==1}}">
+                      <image class="icon-photo" src="img.src" alt=""></image>
+                    </block>
+                  </block>
+                </view>
+              </view>
+            </view>
+            <view class="call-btn-box">
+              <view class="call-btn">
+                <button type="primary" size="mini">打call</button>
+              </view>
+              <view class="call-btn">
+                <button type="primary" size="mini">打call</button>
+              </view>
+            </view>
+          </view>
+        </view>
       </view>
     </block>
-
-    <view class="space"></view>
-  </block>
-  <view style="text-align:center;margin-top:10rpx;">
+  </view>
+  <view style="text-align:center;margin-top:20rpx;">
     <button type="primary" size="mini" bindtap="battle">发起约战</button>
   </view>
 </view>
