--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -80,10 +80,10 @@
             </view>
             <view class="call-btn-box">
               <view class="call-btn">
-                <button type="primary" size="mini" data-vote="1" data-battleid="{{battle.battleId}}" bindtap="doCall">打call</button>
+                <button type="primary" size="mini" data-vote="1" data-battleid="{{battle.battleId}}" bindtap="doCall">打CALL</button>
               </view>
               <view class="call-btn">
-                <button type="primary" size="mini" data-vote="-1" data-battleid="{{battle.battleId}}" bindtap="doCall">打call</button>
+                <button type="primary" size="mini" data-vote="-1" data-battleid="{{battle.battleId}}" bindtap="doCall">打CALL</button>
               </view>
             </view>
           </view>
@@ -98,6 +98,12 @@
     <text>约战规则
       1、发起人实时积分大于3点，可发起约战；
       2、约战成功，会暂扣约战成员每人3点实时积分；
-      3、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得3点年度积分和3点实时积分，负者每人扣掉3点年度积分和3点实时积分）</text>
+      3、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得3点年度积分和3点实时积分，负者每人扣掉3点年度积分和3点实时积分）
+      
+      打CALL规则
+      1、系统每周会选择一组“基情四射”的约战，开放打CALL功能；
+      2、场外人员可选择支（an）持（lian）的一方进行打CALL，暂扣1点实时积分
+      3、活动第二天，系统自动累积积分（猜对者获得1点实时积分，猜错者扣掉1点实时积分）
+      </text>
   </view>
 </view>
