增加我的约战功能

--- a/sunhomo-miniProgram/pages/my/my.wxml
+++ b/sunhomo-miniProgram/pages/my/my.wxml
@@ -53,6 +53,13 @@
 		</view>
 	</navigator>
 	<view class="line"></view>
+	<navigator url="/pages/my/myBattles">
+		<view class="menu-item">
+			<view class="l">我的约战</view>
+			<image class="next" src="/images/arrowright.png"></image>
+		</view>
+	</navigator>
+	<view class="line"></view>
 	<navigator url="/pages/my/myRedeem">
 		<view class="menu-item">
 			<view class="l">我的兑换</view>
@@ -85,7 +92,7 @@
 	<view class="line"></view>
 	<view class="menu-item">
 		<view class="l">小程序版本</view>
-		<view class="r">V3.1.0</view>
+		<view class="r">V3.2.0</view>
 	</view>
 
 </view>
