--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -154,7 +154,7 @@
       2、其他人员实时积分大于3点，可应战，暂扣3点（ 盲盒模式为1点）实时积分；
       3、如果您有未成团的应战，无法发起新的约战或应战；
       4、有未成团的盲盒约战，不能发起新的盲盒约战。成团的盲盒约战在活动当天显示出参战人员，未成团的盲盒约战活动当天自动取消；
-      5、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得3点或1点年度积分和3点或1点实时积分，负者每人扣掉3点或1点年度积分和3点或1点实时积分）
+      5、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
 
       打CALL规则
       1、系统每周会选择一组“基情四射”的约战，开放打CALL功能；
