--- a/sunhomo-miniProgram/pages/battle/battle.wxss
+++ b/sunhomo-miniProgram/pages/battle/battle.wxss
@@ -42,3 +42,9 @@
   font-weight: bold;
   padding-left:20rpx;
 }
+.look_icon{
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 32rpx;
+  vertical-align:middle;
+}
