暗盒模式能看到自己

--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -35,12 +35,12 @@
                 <view wx:if="{{battle.a1Name}}">
                   <view wx:if="{{userInfo.isAdmin==1}}">
                     <view bindtap="quit" data-quiter="{{battle.a1}}" data-position="A1" data-battleid="{{battle.battleId}}">
-                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">A1</view>
+                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate && battle.a1!=userInfo.memberId}}">A1</view>
                       <view wx:else>{{battle.a1Name}}</view>
                     </view>
                   </view>
                   <view wx:else>
-                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">A1</view>
+                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate && battle.a1!=userInfo.memberId}}">A1</view>
                     <view wx:else>{{battle.a1Name}}</view>
                   </view>
                 </view>
@@ -49,12 +49,12 @@
                 <view wx:if="{{battle.a2Name}}">
                   <view wx:if="{{userInfo.isAdmin==1}}">
                     <view bindtap="quit" data-quiter="{{battle.a2}}" data-position="A2" data-battleid="{{battle.battleId}}">
-                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">A2</view>
+                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}} && battle.a2!=userInfo.memberId">A2</view>
                       <view wx:else>{{battle.a2Name}}</view>
                     </view>
                   </view>
                   <view wx:else>
-                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">A2</view>
+                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate && battle.a2!=userInfo.memberId}}">A2</view>
                     <view wx:else>{{battle.a2Name}}</view>
                   </view>
                 </view>
@@ -69,12 +69,12 @@
                 <view wx:if="{{battle.b1Name}}">
                   <view wx:if="{{userInfo.isAdmin==1}}">
                     <view bindtap="quit" data-quiter="{{battle.b1}}" data-position="B1" data-battleid="{{battle.battleId}}">
-                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">B1</view>
+                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}} && battle.b1!=userInfo.memberId">B1</view>
                       <view wx:else>{{battle.b1Name}}</view>
                     </view>
                   </view>
                   <view wx:else>
-                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">B1</view>
+                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate && battle.b1!=userInfo.memberId}}">B1</view>
                     <view wx:else>{{battle.b1Name}}</view>
                   </view>
                 </view>
@@ -83,12 +83,12 @@
                     <view wx:if="{{battle.b2Name}}">
                   <view wx:if="{{userInfo.isAdmin==1}}">
                     <view bindtap="quit" data-quiter="{{battle.b2}}" data-position="B2" data-battleid="{{battle.battleId}}">
-                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">B2</view>
+                      <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate && battle.b2!=userInfo.memberId}}">B2</view>
                       <view wx:else>{{battle.b2Name}}</view>
                     </view>
                   </view>
                   <view wx:else>
-                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate}}">B2</view>
+                    <view wx:if="{{battle.isBlind==1 && battle.battleDate!=currentDate && battle.b2!=userInfo.memberId}}">B2</view>
                     <view wx:else>{{battle.b2Name}}</view>
                   </view>
                 </view>
